# gearsolehulk

./: .dir-locals.el  .gitignore  .hlint.yaml  default.nix  flake.nix  haskell-template.cabal  roadmap.org  thinksim.cabal
nix/modules/flake/: agenix.nix  aider.nix  devshell.nix  packages.nix
secrets/: openrouter.key.age  secrets.nix
src/: Action.hs  Debug.hs  FieldOfView.hs  Items.hs  Main.hs  Maps.hs  Message.hs  Storage.hs  Types.hs  Util.hs
src/Renderer/: Terminal.hs
