cabal-version:      2.4
name:               thinksim
version:            0.1.0.0
license:            MIT
copyright:          
maintainer:         
author:             
homepage:

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
synopsis:           A template for Haskell projects using Nix

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  default-extensions:
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    MultiWayIf
    NoStarIsType
    OverloadedStrings
    StrictData
    TypeFamilies
    ViewPatterns

  build-depends:
    , ansi-terminal
    , aeson
    , array
    , async
    , base          >=4   && <5
    , bytestring
    , colour
    , containers
    , data-default
    , directory
    , ecstasy
    , filepath
    , mtl
    , optics
    , random
    , stm
    , text
    , time
    , transformers
    , with-utf8

  hs-source-dirs:     src
  default-language:   GHC2021

executable haskell-template
  import:  shared
  main-is: Main.hs
